TEST_PROGRAMS/INVALID/serguei_nevarko/invalid4.min
#This program just prints the fraction 1/(2^n) in decimal form.

var message : string;
var message2 : string;
var counter : int;

#error here: boolean is not a supported type.
var fraction : boolean;

message = "The fraction is ";
message2 = "The counter started at zero";

counter = 8;
fraction = 1.0;

if counter then
  while counter do
    counter = counter-1;
    fraction = fraction/2;
    print message+fraction;
  done
else
  print message2;
endif


